--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -29,7 +29,7 @@ set-option -g status-bg default
 set-option -g status-fg default
 set-option -g status-interval 15
 set-option -g status-justify left
-set-option -g status-keys emacs
+set-option -g status-keys vi 
 set-option -g status-left "[#{session_name}] "
 set-option -g status-left-length 10
 set-option -g status-left-style default
